# metalmon

./: .travis.yml  Cargo.toml
migrations/2020-08-14-033931_create_users/: up.sql
migrations/2020-08-20-175209_create_projects/: down.sql  up.sql
migrations/2020-08-22-052511_add_roles/: down.sql  up.sql
src/: admin.rs  api_models.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
tests/: integration_tests.rs
