[package]
name = "metalmon"
version = "0.1.0"
authors = ["Grayson Head <grayson@graysonhead.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "metalmon-admin"
path = "src/admin.rs"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8.9"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
rpassword = "0.0.4"
rust-crypto = "0.2.36"
clap = "2.33.3"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]