[package]
name = "metalmon"
version = "0.1.0"
authors = ["Grayson Head <grayson@graysonhead.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "metalmon-admin"
path = "src/admin.rs"

[dependencies]
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.9.0"
rpassword = "0.0.4"
rust-crypto = "0.2.36"
clap = "2.33.3"
